# swagger/swagger.json
@@ -10,71 +10,59 @@
         "version": "1.0"
     },
     "paths": {
-        "/chat/index": {
-            "get": {
-                "description": "聊天室首页，只显示模板内容。如果当前用户未登录，那么引导跳转到名称设置页面。",
-                "produces": [
-                    "text/html"
-                ],
-                "tags": [
-                    "聊天室"
-                ],
-                "summary": "聊天室首页",
-                "responses": {
-                    "200": {
-                        "description": "执行结果",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/chat/setname": {
-            "get": {
-                "description": "展示设置聊天名称页面，在该页面设置名称，成功后再跳转到聊天室页面。",
-                "produces": [
-                    "text/html"
-                ],
-                "tags": [
-                    "聊天室"
-                ],
-                "summary": "设置聊天名称页面",
-                "responses": {
-                    "200": {
-                        "description": "执行成功后跳转到聊天室页面",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/chat/websocket": {
-            "post": {
-                "description": "通过WebSocket连接该接口发送任意数据。",
-                "tags": [
-                    "聊天室"
-                ],
-                "summary": "WebSocket接口"
-            }
-        },
-        "/user/checknickname": {
+        "/contestant": {
             "get": {
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "用户服务"
+                    "Contestant"
                 ],
-                "summary": "检测用户昵称接口(唯一性校验)",
+                "summary": "获取选手列表",
+                "responses": {
+                    "200": {
+                        "description": "执行结果",
+                        "schema": {
+                            "$ref": "#/definitions/response.JsonResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/contestant/:id": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Contestant"
+                ],
+                "summary": "获取选手详情",
+                "responses": {
+                    "200": {
+                        "description": "执行结果",
+                        "schema": {
+                            "$ref": "#/definitions/response.JsonResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/contestant/my": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Contestant"
+                ],
+                "summary": "获取我名下的选手",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "用户昵称",
-                        "name": "nickname",
-                        "in": "query",
-                        "required": true
+                        "type": "integer",
+                        "description": "是否已打分：0 1",
+                        "name": "isSored",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -87,95 +75,28 @@
                 }
             }
         },
-        "/user/checkpassport": {
-            "get": {
+        "/score/:id": {
+            "put": {
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "用户服务"
+                    "Score"
                 ],
-                "summary": "检测用户账号接口(唯一性校验)",
+                "summary": "打分",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "用户账号",
-                        "name": "passport",
+                        "description": "打分结果:6,3,1,90",
+                        "name": "result",
                         "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "执行结果:`true/false`",
-                        "schema": {
-                            "$ref": "#/definitions/response.JsonResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/issignedin": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "用户服务"
-                ],
-                "summary": "判断用户是否已经登录",
-                "responses": {
-                    "200": {
-                        "description": "执行结果:`true/false`",
-                        "schema": {
-                            "$ref": "#/definitions/response.JsonResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/profile": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "用户服务"
-                ],
-                "summary": "获取用户详情信息",
-                "responses": {
-                    "200": {
-                        "description": "用户信息",
-                        "schema": {
-                            "$ref": "#/definitions/model.User"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/signin": {
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "用户服务"
-                ],
-                "summary": "用户登录接口",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "用户账号",
-                        "name": "passport",
-                        "in": "formData",
                         "required": true
                     },
                     {
-                        "type": "string",
-                        "description": "用户密码",
-                        "name": "password",
-                        "in": "formData",
-                        "required": true
+                        "type": "number",
+                        "description": "分数",
+                        "name": "score",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -188,45 +109,15 @@
                 }
             }
         },
-        "/user/signout": {
+        "/subject/:id": {
             "get": {
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "用户服务"
+                    "Subject"
                 ],
-                "summary": "用户注销/退出接口",
-                "responses": {
-                    "200": {
-                        "description": "执行结果, 1: 未登录",
-                        "schema": {
-                            "$ref": "#/definitions/response.JsonResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/signup": {
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "用户服务"
-                ],
-                "summary": "用户注册接口",
-                "parameters": [
-                    {
-                        "description": "注册请求",
-                        "name": "entity",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.UserApiSignUpReq"
-                        }
-                    }
-                ],
+                "summary": "获取科目详情",
                 "responses": {
                     "200": {
                         "description": "执行结果",
@@ -239,52 +130,6 @@
         }
     },
     "definitions": {
-        "model.User": {
-            "type": "object",
-            "properties": {
-                "createAt": {
-                    "description": "创建时间",
-                    "type": "string"
-                },
-                "id": {
-                    "description": "用户ID",
-                    "type": "integer"
-                },
-                "nickname": {
-                    "description": "用户昵称",
-                    "type": "string"
-                },
-                "passport": {
-                    "description": "用户账号",
-                    "type": "string"
-                },
-                "password": {
-                    "description": "用户密码",
-                    "type": "string"
-                },
-                "updateAt": {
-                    "description": "更新时间",
-                    "type": "string"
-                }
-            }
-        },
-        "model.UserApiSignUpReq": {
-            "type": "object",
-            "properties": {
-                "nickname": {
-                    "type": "string"
-                },
-                "passport": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "password2": {
-                    "type": "string"
-                }
-            }
-        },
         "response.JsonResponse": {
             "type": "object",
             "properties": {
